# ChantaCore

./: .env  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  EXAMPLES.md  EXTERNAL_ADAPTER_FUTURE_TRACK.md  MEMORY_FOUNDATION.md  ONBOARDING_CHECKLIST.md  PUBLIC_ALPHA_RUNTIME_PROFILE.md  PUBLIC_PRIVATE_BOUNDARY.md  QUICKSTART.md  SAFETY_BOUNDARIES.md  SCHUMPETER_PREPARATION.md  SMOKE_DEMO_FLOW.md  WORKBENCH_FOUNDATION.md  chanta_core_default_agent_repl_findings.md  chanta_core_default_agent_repl_findings_for_gpt_vera.md  chanta_core_general_agent_comparison_for_gpt_mode_vera.md  chanta_core_legacy_jsonl_boundary.md  chanta_core_restore_document_policy.md  chanta_core_v0_10_0_restore.md  chanta_core_v0_10_0_to_v0_11_2_audit_for_gpt.md  chanta_core_v0_10_1_restore.md  chanta_core_v0_10_2_restore.md  chanta_core_v0_11_1_restore.md  chanta_core_v0_11_2_restore.md  chanta_core_v0_12_0_restore.md  chanta_core_v0_12_2_restore.md  chanta_core_v0_12_3_restore.md  chanta_core_v0_13_0_restore.md  chanta_core_v0_13_1_restore.md  chanta_core_v0_13_2_restore.md  chanta_core_v0_14_0_restore.md  chanta_core_v0_14_1_restore.md  chanta_core_v0_14_2_restore.md  chanta_core_v0_14_3a_default_agent_capability_contract.md  chanta_core_v0_14_4_restore.md  chanta_core_v0_15_1_restore.md  chanta_core_v0_15_3_restore.md  chanta_core_v0_16_0_restore.md  chanta_core_v0_16_1_restore.md  chanta_core_v0_16_2_restore.md  (+56 more)
scripts/: export_chanta_ocel_json.py  inspect_context_snapshots.py  inspect_pi_substrate.py  report_pi_quality.py  report_process_instance.py  report_recent_pi.py  report_session_pi.py  test_agent_runtime.py  test_autocompact_guardrails.py  test_builtin_skills.py  test_check_self_conformance_skill.py  test_context_collapse.py  test_context_compaction.py  test_context_compaction_report.py  test_context_history_snip.py  test_context_snapshot.py  test_decision_service.py  test_decision_tightening.py  test_delegated_process_run.py  test_delegation_conformance.py  test_edit_proposal.py  (+62 more)
(+1982 files in other folders)
