[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chanta-core"
version = "0.2.0"
description = "Trace-aware runtime core for ChantaResearchGroup agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ChantaCore" }]
dependencies = [
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "pytest>=8.0.0",
]

[project.scripts]
chanta-cli = "chanta_core.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
