[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chanta-core"
version = "0.11.2"
description = "OCEL-native process outcome evaluation from verification evidence."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ChantaCore" }]
dependencies = [
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "pytest>=8.0.0",
]

[project.scripts]
chanta-cli = "chanta_core.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp --ignore=references"
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
  "references",
  "data",
  ".pytest-tmp",
  ".venv",
]
